--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -44,7 +44,7 @@
     "postcss": "^8.4.47",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.3.0",
     "url": "^0.11.4",
     "util": "^0.12.5"
   }
